# mogl

./: Cargo.toml  models.sh
assets/: CREDIT.md
src/: lib.rs  main.rs  model.rs  shader.rs  shader.vert
src/shaders/: model.frag  model.vert
