[package]
name = "mogl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
model = []

[dependencies]
glam = "0.30"
tobj = "4.0"

[target.'cfg(target_os = "linux")'.dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"generic",
	"glutin",
] }

[target.'cfg(target_os = "macos")'.dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"opengl",
] }
