[package]
name = "mogl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glazer/hot-reload"]

[dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"opengl",
] }
glam = "0.30"
tobj = "4.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.103"
